@@ -78,9 +78,10 @@ rgl.numeric <- function ( x )
 # vertex data object
 #
 
-rgl.vertex <- function (x,y,z)
+rgl.vertex <- function (x,y=NULL,z=NULL)
 {
-  return ( matrix( rbind(x,y,z), nrow=3, dimnames=list( c("x","y","z"), NULL ) ) )
+  xyz <- xyz.coords(x,y,z,recycle=TRUE)
+  return ( matrix( rbind(xyz$x,xyz$y,xyz$z), nrow=3, dimnames=list( c("x","y","z"), NULL ) ) )
 }
 
 
