@@ -9,14 +9,16 @@
 Adds a shape node to the current scene
 }
 \usage{
-points3d(x, y, z,  ...)
-lines3d(x, y, z,  ...)
-segments3d(x, y, z, ...)
-triangles3d(x, y, z, ...)
-quads3d(x, y, z, ...)
+points3d(x, y = NULL, z = NULL,  ...)
+lines3d(x, y = NULL, z = NULL,  ...)
+segments3d(x, y = NULL, z = NULL, ...)
+triangles3d(x, y = NULL, z = NULL, ...)
+quads3d(x, y = NULL, z = NULL, ...)
 }
 \arguments{
-  \item{x, y, z}{coordinates}
+  \item{x, y, z}{coordinates. Any reasonable way of defining the
+    coordinates is acceptable.  See the function \code{\link{xyz.coords}}
+    for details.}
   \item{ ... }{Material properties. See \code{\link{rgl.material}} for details.}  
 }
 \details{
