@@ -8,13 +8,15 @@ This function converts from 3-dimensional user coordinates
 to 3-dimensional window coordinates.
 }
 \usage{
-rgl.user2window(x, y, z, projection = rgl.projection())
-rgl.window2user(x, y, z = 0, projection = rgl.projection())
+rgl.user2window(x, y = NULL, z = NULL, projection = rgl.projection())
+rgl.window2user(x, y = NULL, z = 0, projection = rgl.projection())
 rgl.projection()
 }
 %- maybe also 'usage' for other objects documented here.
 \arguments{
-  \item{x, y, z}{Input coordinates }
+  \item{x, y, z}{Input coordinates.  Any reasonable way of defining the
+    coordinates is acceptable.  See the function \code{\link{xyz.coords}}
+    for details.}
   \item{projection}{The rgl projection to use }
 }
 \details{
@@ -40,7 +42,7 @@ points3d(rnorm(100), rnorm(100), rnorm(100))
 if (interactive() || !.Platform$OS=="unix") {
 # Calculate a square in the middle of the display and plot it
 square <- rgl.window2user(c(0.25, 0.25, 0.75, 0.75, 0.25), c(0.25, 0.75, 0.75, 0.25, 0.25), 0)
-lines3d(square[,1], square[,2], square[,3])
+lines3d(square)
 }
 }
 \keyword{ dynamic }
