@@ -6,12 +6,14 @@
   Adds a sphere set shape node to the scene
 }
 \usage{
-spheres3d(x, y, z, radius = 1, ...)
-rgl.spheres(x, y, z, radius, ...)
+spheres3d(x, y = NULL, z = NULL, radius = 1, ...)
+rgl.spheres(x, y = NULL, z = NULL, radius, ...)
 }
 \arguments{
   \item{x, y, z}{Numeric vector of point coordinates corresponding to
-   the center of each sphere}
+   the center of each sphere.  Any reasonable way of defining the
+    coordinates is acceptable.  See the function \code{\link{xyz.coords}}
+    for details.}
   \item{radius}{Vector or single value defining the sphere radius/radii}
   \item{ ... }{Material properties. See \code{\link{rgl.material}} for details.}
 }
