@@ -119,4 +119,5 @@ v0.65
 v0.65-2
   - added "all" and "viewpoint" to rgl.clear and clear3d
   - added static libpng build support and user customizable prefix (unix)
-
+  - used xyz.coords in all functions taking x, y, z coordinates, allowing
+    matrix or dataframe arguments (among others)
